# python_pytest

./: .gitignore  int_closed_range.py  pyproject.toml
tests/: test_int_closed_range.py
tests/acme/: test_snake.py
