[tool.poetry]
name = "python_pytest"
version = "0.1.0"
description = ""
authors = ["Ryuji Watanabe <ryujisan@pepabo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
appdirs = "1.4.4"
cov-core = "1.15.0"
coverage = "5.5"
distlib = "0.3.1"
execnet = "1.8.0"
filelock = "3.0.12"
iniconfig = "1.1.1"
py = "1.10.0"
pytest-cov = "2.11.1"
pytest-xdist = "2.2.1"
pytest = "6.2.4"
tox = "3.23.1"
virtualenv = "20.4.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
